--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -68,11 +68,16 @@ register_toolchains(
 ## zig
 ## https://sr.ht/~motiejus/bazel-zig-cc/
 
-BAZEL_ZIG_CC_VERSION = "v0.8.0"
+BAZEL_ZIG_CC_VERSION = "v0.9.2"
+SHA256 = "73afa7e1af49e3dbfa1bae9362438cdc51cb177c359a6041a7a403011179d0b5"
+
+# not yet:
+# BAZEL_ZIG_CC_VERSION = "v1.0.0-rc1"
+# SHA256 = "07c8cc88faed737f5e7fc74b2bce94382486c40245b1ce718c6cd3774ba6be5f"
 
 http_archive(
     name = "bazel-zig-cc",
-    sha256 = "defdb86f90dbaa1101b3b6cd74ed9a1e38353db4d33560878f3307c1f32838d8",
+    sha256 = SHA256,
     strip_prefix = "bazel-zig-cc-{}".format(BAZEL_ZIG_CC_VERSION),
     urls = ["https://git.sr.ht/~motiejus/bazel-zig-cc/archive/{}.tar.gz".format(BAZEL_ZIG_CC_VERSION)],
 )
@@ -91,22 +96,20 @@ zig_toolchains(
 )
 
 register_toolchains(
+    ## enable these to always use zig, and to cross-compile
     # if no `--platform` is specified, these toolchains will be used for
-    # (linux,darwin,windows)x(amd64,arm64)
-
+    # (linux,darwin)x(amd64,arm64)
     # "@zig_sdk//toolchain:linux_amd64_gnu.2.25",
     # "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
     # "@zig_sdk//toolchain:darwin_amd64",
     # "@zig_sdk//toolchain:darwin_arm64",
-
-    # "@zig_sdk//toolchain:windows_amd64",
-    # "@zig_sdk//toolchain:windows_arm64",
 
     # # amd64 toolchains for libc-aware platforms:
     # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.19",
     # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
     # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.31",
     # "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
+
     # # arm64 toolchains for libc-aware platforms:
     # "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
     # "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
