--- a/boot/bin/BUILD.bazel
+++ b/boot/bin/BUILD.bazel
@@ -19,6 +19,9 @@ load("//config:CONFIG.bzl",
      # "OC_DEBUG_CPPDEFINES", "OC_INSTR_CPPDEFINES",
      # "OC_CPPDEFINES", "OC_NATIVE_CPPDEFINES",
      # other
+
+     "OC_COMMON_LDFLAGS",
+     "BOOT_STDLIBFLAGS"
      )
 
 alias(
@@ -49,16 +52,74 @@ ocamlc_boot( ##FIXME: do we really need a separate rule?
     ]
 )
 
+# tool type sys>vm?
+# The bytecode compiler compiled with the native-code compiler
+# ocamlc.opt$(EXE): compilerlibs/ocamlcommon.cmxa \
+#                   compilerlibs/ocamlbytecomp.cmxa $(BYTESTART:.cmo=.cmx)
+# 	$(CAMLOPT_CMD) $(OC_COMMON_LDFLAGS) -o $@ $^ -cclib "$(BYTECCLIBS)"
+#
+# BYTESTART=driver/main.cmo
+# OPTSTART=driver/optmain.cmo
+
+## FIXME: need a transition to *>sys toolchain to produce sys>vm
 bootstrap_executable(
-    name = "ocamlopt",
+    name = "ocamlc.opt",
     opts = [],
     deps = [
         "//compilerlibs:ocamlcommon",
         "//compilerlibs:ocamloptcomp",
-        # "//stdlib",
+        "//driver",
+        "//driver:Main",
+    ],
+    visibility = [
+        "//testsuite:__pkg__"
+    ]
+)
+
+# The native-code compiler (vm>sys)
+# ocamlopt$(EXE): compilerlibs/ocamlcommon.cma compilerlibs/ocamloptcomp.cma $(OPTSTART)
+# 	$(CAMLC) $(OC_COMMON_LDFLAGS) -o $@ $^
+## OPTSTART=driver/optmain.cmo
+## CAMLC = $(BOOT_OCAMLC) $(BOOT_STDLIBFLAGS) -use-prims runtime/primitives
+## BOOT_STDLIBFLAGS ?= -nostdlib -I $(ROOTDIR)/boot
+## BOOT_OCAMLC boot/ocamlc.opt (sys>vm) if available (and newer than
+#   boot/ocamlc), otherwise boot/ocamlc (vm>vm)
+
+bootstrap_executable(
+    name = "ocamlopt",
+    opts = OC_COMMON_LDFLAGS,
+    deps = [
+        "//compilerlibs:ocamlcommon",
+        "//compilerlibs:ocamloptcomp",
         "//driver:Optmain"
     ],
     visibility = [
         "//testsuite:__pkg__"
     ]
+)
+
+# The native-code compiler compiled with itself
+# ocamlopt.opt$(EXE): \
+#                     compilerlibs/ocamlcommon.cmxa \
+#                     compilerlibs/ocamloptcomp.cmxa \
+#                     $(OPTSTART:.cmo=.cmx)
+# 	$(CAMLOPT_CMD) $(OC_COMMON_LDFLAGS) -o $@ $^
+
+## switch to cmx handled by toolchain?
+bootstrap_executable(
+    name = "ocamlopt.opt",
+    opts = OC_COMMON_LDFLAGS,
+    deps = [
+        "//compilerlibs:ocamlcommon",
+        "//compilerlibs:ocamloptcomp",
+        "//driver:Optmain"
+    ],
+    visibility = [
+        "//testsuite:__pkg__"
+    ]
+)
+
+alias(
+    name = "ocamlyacc",
+    actual = "//yacc:ocamlyacc"
 )
