--- a/toolchain/selectors/BUILD.bazel
+++ b/toolchain/selectors/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//toolchain:BUILD.bzl", "toolchain_selector")
+load(":BUILD.bzl", "toolchain_selector")
 
 package(default_visibility=["//visibility:public"])
 
