--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -67,11 +67,22 @@ cc_binary(
     srcs = ["sak.c"],
     copts = OC_CFLAGS + CFLAGS + CPPFLAGS + [
         ## for platform-dependend s.h:
-        "-I", "$(GENDIR)/runtime/caml/cross-compile"
+        "-I", "$(GENDIR)/runtime/caml/cross-compile",
+        "$(OC_CFLAGS)",
+        "$(OC_CPPFLAGS)",
+        "$(OC_LDFLAGS)",
     ],
-    defines = RUNTIME_DEFINES,
+    defines = RUNTIME_DEFINES + ["$(OC_DEFINES)"],
     linkopts = OC_LDFLAGS + LDFLAGS,
-    deps= ["//runtime/caml:hdrs"],
+    deps= [
+        "//runtime/caml:hdrs",
+    ],
+    ## access to Make vars:
+    toolchains = [
+        "//toolchain:profile"
+        # "//toolchain/type:cc_tc_profile"
+        # "@bazel_tools//tools/cpp:current_cc_toolchain"
+    ],
     visibility = ["//runtime/caml:__pkg__"]
 )
 
