--- a/toolchain/profiles/cc/local/BUILD.bazel.in
+++ b/toolchain/profiles/cc/local/BUILD.bazel.in
@@ -8,9 +8,8 @@ OC_CFLAGS = fix_oc_cflags("@oc_cflags@".split(" "))
 #####################
 cc_toolchain_profile(
     name     = "local",
-    # for testing, some harmless flags
     CFLAGS   = OC_CFLAGS,
-    CPPFLAGS = ["-Rmodule-import"],
-    LDFLAGS  = ["-Rmodule-build"],
-    DEFINES  = ["LOCAL_DEF"]
+    CPPFLAGS = "@oc_cppflags@".split(" "),
+    LDFLAGS  = "@LDFLAGS@".split(" "),
+    # DEFINES  = []
 )
