--- a/toolchain/profile/selector/cc/local/BUILD.bazel
+++ b/toolchain/profile/selector/cc/local/BUILD.bazel
@@ -1,9 +1,9 @@
-load("//toolchain/profiles:BUILD.bzl", "cc_toolchain_profile_selector")
+load("//toolchain/profile:BUILD.bzl", "cc_toolchain_profile_selector")
 
 ##############################
 cc_toolchain_profile_selector(
     name                    = "linux",
-    profile                 = "//toolchain/profiles/cc/local",
+    profile                 = "//toolchain/profile/cc/local",
     build_host_constraints = ["@platforms//os:linux"],
     target_host_constraints = ["@platforms//os:linux"],
 )
@@ -11,7 +11,7 @@ cc_toolchain_profile_selector(
 ##############################
 cc_toolchain_profile_selector(
     name                    = "macos",
-    profile                 = "//toolchain/profiles/cc/local",
+    profile                 = "//toolchain/profile/cc/local",
     build_host_constraints = ["@platforms//os:macos"],
     target_host_constraints = ["@platforms//os:macos"],
 )
