--- a/.bazelrc
+++ b/.bazelrc
@@ -2,24 +2,27 @@
 # build --incompatible_enable_cc_toolchain_resolution
 
 # build --toolchain_resolution_debug=.*
-# build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
+build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 
-#### alternate toolchain:
-# build --extra_toolchains=@zig_sdk//toolchain:darwin_amd64
-# build --extra_toolchains=@zig_sdk//toolchain:linux_arm64_gnu.2.28
+#### alternate toolchain: pass tc and profile if needed
+## build --extra_toolchains=@zig_sdk//toolchain:darwin_amd64
 
-#### cross-builds: specify target platform and 1 toolchain per host
-# build --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.25,@zig_sdk//toolchain:darwin_amd64
-# ## enable one of these
-# build --platforms=@zig_sdk//platform:linux_amd64
+## zig on linux does not support some flags set by ./configre
+## so we need to pass a customized tc profile
+# build --extra_toolchains=@zig_sdk//toolchain:linux_arm64_gnu.2.28,//profile/selector/cc/linux:zig
+
+#### cross-builds: specify target platform and 1 toolchain per host (?)
+#### plus target profile if needed (zig needs it)
+build --extra_toolchains=@zig_sdk//toolchain:linux_amd64_gnu.2.31,//toolchain/profile/selector/cc/linux:zig
+##,@zig_sdk//toolchain:darwin_amd64
+
+# ## set the target platform:
+build --platforms=@zig_sdk//platform:linux_amd64
 # build --platforms=@zig_sdk//platform:linux_arm64
-## xcompile target:
-# build --//config/toolchain=zig
 
 
 # build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # build --action_env ZIG_SYSTEM_LINKER_HACK=1
-
 
 ## set cc opts for specific files:
 # build --per_file_copt=
