--- a/config/CONFIG.bzl.in
+++ b/config/CONFIG.bzl.in
@@ -292,25 +292,17 @@ as_has_debug_prefix_map = "@as_has_debug_prefix_map@" == "true"
 # mac: "-O2 -fno-strict-aliasing -fwrapv -pthread -g -Wall -Werror -fno-common"
 # linux: "-O2 -fno-strict-aliasing -fwrapv -pthread -g -Wall -Werror -fno-common -fexcess-precision=standard -fno-tree-vrp -ffunction-sections"
 
-## WARNING: The legacy code conflates -g (build for debugger) and
-## -DDEBUG, which may mean other things - here, it means the runtime
-## must link instrtrace.c. Bazel makes a distinction: a `-c dbg` build
-## adds `-g` but not `-DDEBUG`. A `-c fastbuild` build (the default)
-## adds `-DDEBUG` but not `-g`. This makes sense considering DEBUG has
-## no intrinsic relation to the debugger.
+# def fix_oc_cflags(x):
+#     if "-O2" in x:
+#         x.remove("-O2")
+#     if "-g" in x:
+#         x.remove("-g")
 
-## The configure script puts both -O2 and -g in this var. For Bazel we
-## have command line args to control optimizations, so we remove those
-## here.
-def fix_oc_cflags(x):
-    if "-O2" in x:
-        x.remove("-O2")
-    if "-g" in x:
-        x.remove("-g")
+#     return x
 
-    return x
-
-OC_CFLAGS = fix_oc_cflags("@oc_cflags@".split(" "))
+# OC_CFLAGS = fix_oc_cflags("@oc_cflags@".split(" "))
+#### IMPORTANT: OC_CFLAGS is emitted by ./configure to
+####     //toolchain/profile/cc/local/BUILD.bazel
 
 # CFLAGS not used in Makefile. Used in Makefile.common, in the
 # generic rule for compiling C sources. Also used in:
@@ -678,8 +670,8 @@ MKEXE = "@mkexe@"
 MKDLL = "@mkdll@"
 MKMAINDLL = "@mkmaindll@"
 MKEXEDEBUGFLAG = "@mkexedebugflag@"
-MKEXE_VIA_CC= [CC, OC_EXE_LDFLAGS, OC_CFLAGS, CFLAGS]
-MKEXE_VIA_CC_LDFLAGS = "@mkexe_via_cc_ldflags@"
+# MKEXE_VIA_CC= [CC, OC_EXE_LDFLAGS, OC_CFLAGS, CFLAGS]
+# MKEXE_VIA_CC_LDFLAGS = "@mkexe_via_cc_ldflags@"
 
 RUNTIMED = "@debug_runtime@" == "true"
 INSTRUMENTED_RUNTIME = "@instrumented_runtime@" == "true"
